--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -242,7 +242,6 @@
       position: relative;
       z-index: 2;
       margin: 0 auto;
-      padding: 0 20px;
       box-sizing: border-box;
 
       @include content-width;
